# Soa-2024-1

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  Readme.md  ecal5-5.12.1-cp39-cp39-win_amd64.whl  main.py  requirements.txt
.github/workflows/: python-package.yml  python-ubuntu-package.yml  python-windows-package.yml
MQ/: receive_direct_exchange_rabbit.py  send_direct_exchange_rabbit.py  task_rabbit.py
cpp/: ecal_interface.h  receive_webcam.cpp  send_webcam.cpp
proto/: image.proto
python/: detect_show yolo_segm.py  detect_yolo.py  detect_yolo_segm.py  detection_module.py  detections.proto  detections_pb2.py  ecal_interfaces.py  image_pb2.py  image_processing.py  input_interface.py  mi_mensaje_pb2.py  receive.py  receive_webcam.py  requirements.txt  send_only_webcam.py  send_webcam.py  send_webcam_people_detection.py  sending.py  yolo_demo.py
